// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateEditor onlyDatePicker snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1amv3lq-DateEditor"
  >
    <input
      aria-autocomplete="none"
      class="css-izz69a-DateEditor"
      id="propdate"
      max="9999-12-31"
      name="propdate"
      placeholder="enter a date for prop"
      type="date"
    />
  </div>
</DocumentFragment>
`;

exports[`DateEditor onlyTimePicker snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1amv3lq-DateEditor"
  >
    <input
      aria-autocomplete="none"
      class="css-izz69a-DateEditor"
      id="proptime"
      name="proptime"
      placeholder="enter a time for prop"
      type="time"
    />
  </div>
</DocumentFragment>
`;

exports[`DateEditor overview snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1amv3lq-DateEditor"
  >
    <input
      aria-autocomplete="none"
      class="css-izz69a-DateEditor"
      id="propdate"
      max="9999-12-31"
      name="propdate"
      placeholder="enter a date for prop"
      type="date"
    />
    <input
      aria-autocomplete="none"
      class="css-izz69a-DateEditor"
      id="proptime"
      name="proptime"
      placeholder="enter a time for prop"
      type="time"
    />
  </div>
</DocumentFragment>
`;
